crates/shipper-cli/tests/snapshots/e2e_expanded__config_validate_policy_section.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalized
---
Configuration file is valid: <CONFIG_PATH>
