crates/shipper-cli/tests/snapshots/e2e_expanded__config_validate_wrong_type.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: "normalize_stderr(&stderr.replace(config_path.to_str().unwrap(),\n\"<CONFIG_PATH>\").replace(&config_path.to_str().unwrap().replace('\\\\', \"/\"),\n\"<CONFIG_PATH>\",),)"
---
Error: Failed to load config file: <CONFIG_PATH>

Caused by:
    0: Failed to parse config file: <CONFIG_PATH>
    1: TOML parse error at line 3, column 10
         |
       3 | method = 99999
         |          ^^^^^
       wanted string or table
