crates/shipper-cli/tests/snapshots/e2e_expanded__error_invalid_base_delay.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
Error: invalid duration: not-a-duration

Caused by:
    expected number at 0
