crates/shipper-cli/tests/snapshots/e2e_expanded__error_invalid_format_value.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalized
---
error: invalid value 'invalid' for '--format <FORMAT>'
  [possible values: text, json]

For more information, try '--help'.
