crates/shipper-cli/tests/snapshots/e2e_expanded__error_invalid_policy.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
Error: invalid policy: bogus (expected: safe, balanced, fast)
