crates/shipper-cli/tests/snapshots/e2e_expanded__error_invalid_readiness_method.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
Error: invalid readiness-method: bogus (expected: api, index, both)
