crates/shipper-cli/tests/snapshots/e2e_expanded__error_invalid_retry_strategy.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
Error: invalid retry-strategy: bogus (expected: immediate, exponential, linear, constant)
