crates/shipper-cli/tests/snapshots/e2e_expanded__error_invalid_verify_mode.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
Error: invalid verify-mode: bogus (expected: workspace, package, none)
