crates/shipper-cli/tests/snapshots/e2e_expanded__error_missing_ci_subcommand.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalized
---
Print CI configuration snippets for various platforms

Usage: shipper-cli ci [OPTIONS] <COMMAND>

Commands:
  github-actions  Print GitHub Actions workflow snippet
  gitlab          Print GitLab CI workflow snippet
  circleci        Print CircleCI workflow snippet
  azure-devops    Print Azure DevOps pipeline snippet
  help            Print this message or the help of the given subcommand(s)

Options:
      --config <CONFIG>                Path to a custom configuration file (.shipper.toml)
      --manifest-path <MANIFEST_PATH>  Path to the workspace Cargo.toml [default: Cargo.toml]
      --registry <REGISTRY>            Cargo registry name (default: crates-io)
      --api-base <API_BASE>            Registry API base URL (default: <https://crates.io>)
      --package <PACKAGES>             Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members
      --state-dir <STATE_DIR>          Directory for shipper state and receipts (default: .shipper)
      --format <FORMAT>                Output format: text (default) or json [default: text] [possible values: text, json]
      --verbose                        Show detailed dependency analysis for plan command
  -q, --quiet                          Suppress informational output
  -h, --help                           Print help (see more with '--help')
