crates/shipper-cli/tests/snapshots/e2e_expanded__error_missing_completion_shell.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stderr)
---
error: the following required arguments were not provided:
  <SHELL>

Usage: shipper-cli completion <SHELL>

For more information, try '--help'.
